TF-IDF - case sensitivity option
Add parameter allowing to specify whether input data
should be treated as case sensitive. Add unit tests
to test this option. Adjust demo notebook to demonstrate
this option.

--- a/h2o-py/demos/tf-idf.ipynb
+++ b/h2o-py/demos/tf-idf.ipynb
@@ -51,7 +51,7 @@
     "\n",
     "input_frame = h2o.H2OFrame({'DocID': doc_ids, 'Document': documents},\n",
     "                            column_types=['numeric', 'string'])\n",
-    "input_frame"
+    "input_frame.head()"
    ]
   },
   {
@@ -70,7 +70,7 @@
     "from h2o.information_retrieval.tf_idf import tf_idf\n",
     "\n",
     "tf_idf_out = tf_idf(input_frame)\n",
-    "tf_idf_out"
+    "tf_idf_out.head()"
    ]
   },
   {
@@ -115,10 +115,10 @@
    "source": [
     "preprocessed_data = [(doc_id, word) for doc_id, document in enumerate(documents) for word in document.split()]\n",
     "\n",
-    "input_frame = h2o.H2OFrame(preprocessed_data,\n",
-    "                           column_names=['DocID', 'Document'],\n",
-    "                           column_types=['numeric', 'string'])\n",
-    "input_frame"
+    "preprocessed_input_frame = h2o.H2OFrame(preprocessed_data,\n",
+    "                                        column_names=['DocID', 'Document'],\n",
+    "                                        column_types=['numeric', 'string'])\n",
+    "preprocessed_input_frame.head()"
    ]
   },
   {
@@ -127,8 +127,34 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tf_idf_out = tf_idf(input_frame, preprocess=False)\n",
-    "tf_idf_out"
+    "tf_idf_out = tf_idf(preprocessed_input_frame, preprocess=False)\n",
+    "tf_idf_out.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_idf_output_summary(tf_idf_out)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Case insensitive TF-IDF"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "tf_idf_out = tf_idf(input_frame, case_sensitive=False)\n",
+    "tf_idf_out.head()"
    ]
   },
   {
