WIP PUBDEV-7608 - make tests compatible with pandas 1.0.x

--- a/h2o-docs/src/product/tutorials/gbm/gbmTuning.ipynb
+++ b/h2o-docs/src/product/tutorials/gbm/gbmTuning.ipynb
@@ -3169,8 +3169,8 @@
    "source": [
     "from sklearn.metrics import roc_auc_score\n",
     "# convert prob and test[response] h2oframes to pandas' frames and then convert them each to numpy array\n",
-    "np_array_prob = prob.as_data_frame().as_matrix()\n",
-    "np_array_test = test[response].as_data_frame().as_matrix()\n",
+    "np_array_prob = prob.as_data_frame().to_numpy()\n",
+    "np_array_test = test[response].as_data_frame().to_numpy()\n",
     "probInPy = np_array_prob\n",
     "labeInPy = np_array_test\n",
     "# compare true scores (test[response]) to probability scores (prob)\n",
