PUBDEV-6938 cloud size 1, pyunit compare frame NA false, fix python 2.7 demo issues

--- a/h2o-py/demos/tf-idf.ipynb
+++ b/h2o-py/demos/tf-idf.ipynb
@@ -9,85 +9,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Checking whether there is an H2O instance running at http://localhost:54321 ..... not found.\n",
-      "Attempting to start a local H2O server...\n",
-      "  Java Version: java version \"1.8.0_191\"; Java(TM) SE Runtime Environment (build 1.8.0_191-b12); Java HotSpot(TM) 64-Bit Server VM (build 25.191-b12, mixed mode)\n",
-      "  Starting server from /home/mori/Documents/h2o/code/h2o-3/build/h2o.jar\n",
-      "  Ice root: /tmp/tmp9vl7ey5c\n",
-      "  JVM stdout: /tmp/tmp9vl7ey5c/h2o_mori_started_from_python.out\n",
-      "  JVM stderr: /tmp/tmp9vl7ey5c/h2o_mori_started_from_python.err\n",
-      "  Server is running at http://127.0.0.1:54321\n",
-      "Connecting to H2O server at http://127.0.0.1:54321 ... successful.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>01 secs</td></tr>\n",
-       "<tr><td>H2O_cluster_timezone:</td>\n",
-       "<td>Europe/Berlin</td></tr>\n",
-       "<tr><td>H2O_data_parsing_timezone:</td>\n",
-       "<td>UTC</td></tr>\n",
-       "<tr><td>H2O_cluster_version:</td>\n",
-       "<td>3.31.0.99999</td></tr>\n",
-       "<tr><td>H2O_cluster_version_age:</td>\n",
-       "<td>4 hours and 41 minutes </td></tr>\n",
-       "<tr><td>H2O_cluster_name:</td>\n",
-       "<td>H2O_from_python_mori_7h2jq1</td></tr>\n",
-       "<tr><td>H2O_cluster_total_nodes:</td>\n",
-       "<td>1</td></tr>\n",
-       "<tr><td>H2O_cluster_free_memory:</td>\n",
-       "<td>5.127 Gb</td></tr>\n",
-       "<tr><td>H2O_cluster_total_cores:</td>\n",
-       "<td>8</td></tr>\n",
-       "<tr><td>H2O_cluster_allowed_cores:</td>\n",
-       "<td>8</td></tr>\n",
-       "<tr><td>H2O_cluster_status:</td>\n",
-       "<td>accepting new members, healthy</td></tr>\n",
-       "<tr><td>H2O_connection_url:</td>\n",
-       "<td>http://127.0.0.1:54321</td></tr>\n",
-       "<tr><td>H2O_connection_proxy:</td>\n",
-       "<td>{\"http\": null, \"https\": null}</td></tr>\n",
-       "<tr><td>H2O_internal_security:</td>\n",
-       "<td>False</td></tr>\n",
-       "<tr><td>H2O_API_Extensions:</td>\n",
-       "<td>Amazon S3, XGBoost, Algos, AutoML, Core V3, TargetEncoder, Core V4</td></tr>\n",
-       "<tr><td>Python_version:</td>\n",
-       "<td>3.7.3 candidate</td></tr></table></div>"
-      ],
-      "text/plain": [
-       "--------------------------  ------------------------------------------------------------------\n",
-       "H2O_cluster_uptime:         01 secs\n",
-       "H2O_cluster_timezone:       Europe/Berlin\n",
-       "H2O_data_parsing_timezone:  UTC\n",
-       "H2O_cluster_version:        3.31.0.99999\n",
-       "H2O_cluster_version_age:    4 hours and 41 minutes\n",
-       "H2O_cluster_name:           H2O_from_python_mori_7h2jq1\n",
-       "H2O_cluster_total_nodes:    1\n",
-       "H2O_cluster_free_memory:    5.127 Gb\n",
-       "H2O_cluster_total_cores:    8\n",
-       "H2O_cluster_allowed_cores:  8\n",
-       "H2O_cluster_status:         accepting new members, healthy\n",
-       "H2O_connection_url:         http://127.0.0.1:54321\n",
-       "H2O_connection_proxy:       {\"http\": null, \"https\": null}\n",
-       "H2O_internal_security:      False\n",
-       "H2O_API_Extensions:         Amazon S3, XGBoost, Algos, AutoML, Core V3, TargetEncoder, Core V4\n",
-       "Python_version:             3.7.3 candidate\n",
-       "--------------------------  ------------------------------------------------------------------"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "import h2o\n",
     "\n",
@@ -152,6 +76,8 @@
     }
    ],
    "source": [
+    "from collections import OrderedDict\n",
+    "\n",
     "documents = [\n",
     "    'H2O is an in-memory platform for distributed, scalable machine learning. H2O uses familiar interfaces like R, Python, Scala, Java, JSON and the Flow notebook/web interface, and works seamlessly with big data technologies like Hadoop and Spark.',\n",
     "    'Ice hockey is a contact team sport played on ice, usually in a rink, in which two teams of skaters use their sticks to shoot a vulcanized rubber puck into their opponent\\'s net to score goals. The sport is known to be fast-paced and physical.',\n",
@@ -159,7 +85,7 @@
     "]\n",
     "doc_ids = list(range(len(documents)))\n",
     "\n",
-    "input_frame = h2o.H2OFrame({'DocID': doc_ids, 'Document': documents},\n",
+    "input_frame = h2o.H2OFrame(OrderedDict([('DocID', doc_ids), ('Document', documents)]),\n",
     "                            column_types=['numeric', 'string'])\n",
     "input_frame.head()"
    ]
@@ -216,6 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from IPython.display import DisplayObject, display\n",
     "VALUES_CNT_TO_SHOW = 3\n",
     "\n",
     "def tf_idf_output_summary(tf_idf_out):\n",
@@ -771,7 +698,7 @@
     }
    ],
    "source": [
-    "input_frame = h2o.H2OFrame({'DocID': doc_ids, 'Document': documents},\n",
+    "input_frame = h2o.H2OFrame(OrderedDict([('DocID', doc_ids), ('Document', documents)]),\n",
     "                            column_types=['numeric', 'string'])"
    ]
   },
