--- a/h2o-py/demos/word2vec_craigslistjobtitles.ipynb
+++ b/h2o-py/demos/word2vec_craigslistjobtitles.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "job_titles_path = \"https://raw.githubusercontent.com/h2oai/sparkling-water/rel-1.6/examples/smalldata/craigslistJobTitles.csv\"\n",
+    "job_titles_path = \"https://s3.amazonaws.com/h2o-public-test-data/smalldata/craigslistJobTitles.csv\"\n",
     "job_titles = h2o.import_file(job_titles_path, destination_frame = \"jobtitles\",\n",
     "                             col_names = [\"category\", \"jobtitle\"], col_types = [\"enum\", \"string\"], header = 1)"
    ]
