Airlines demo: rule length 1 to 4

--- a/h2o-py/demos/rulefit_demo_airlines.ipynb
+++ b/h2o-py/demos/rulefit_demo_airlines.ipynb
@@ -41,7 +41,7 @@
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>14 mins 14 secs</td></tr>\n",
+       "<td>24 secs</td></tr>\n",
        "<tr><td>H2O_cluster_timezone:</td>\n",
        "<td>Europe/Prague</td></tr>\n",
        "<tr><td>H2O_data_parsing_timezone:</td>\n",
@@ -49,13 +49,13 @@
        "<tr><td>H2O_cluster_version:</td>\n",
        "<td>3.32.0.99999</td></tr>\n",
        "<tr><td>H2O_cluster_version_age:</td>\n",
-       "<td>17 hours and 47 minutes </td></tr>\n",
+       "<td>3 days </td></tr>\n",
        "<tr><td>H2O_cluster_name:</td>\n",
        "<td>rulefit_local</td></tr>\n",
        "<tr><td>H2O_cluster_total_nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O_cluster_free_memory:</td>\n",
-       "<td>55.85 Gb</td></tr>\n",
+       "<td>55.51 Gb</td></tr>\n",
        "<tr><td>H2O_cluster_total_cores:</td>\n",
        "<td>40</td></tr>\n",
        "<tr><td>H2O_cluster_allowed_cores:</td>\n",
@@ -75,14 +75,14 @@
       ],
       "text/plain": [
        "--------------------------  ------------------------------------------------------------------\n",
-       "H2O_cluster_uptime:         14 mins 14 secs\n",
+       "H2O_cluster_uptime:         24 secs\n",
        "H2O_cluster_timezone:       Europe/Prague\n",
        "H2O_data_parsing_timezone:  UTC\n",
        "H2O_cluster_version:        3.32.0.99999\n",
-       "H2O_cluster_version_age:    17 hours and 47 minutes\n",
+       "H2O_cluster_version_age:    3 days\n",
        "H2O_cluster_name:           rulefit_local\n",
        "H2O_cluster_total_nodes:    1\n",
-       "H2O_cluster_free_memory:    55.85 Gb\n",
+       "H2O_cluster_free_memory:    55.51 Gb\n",
        "H2O_cluster_total_cores:    40\n",
        "H2O_cluster_allowed_cores:  40\n",
        "H2O_cluster_status:         locked, healthy\n",
@@ -108,7 +108,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +150,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -163,9 +163,9 @@
    ],
    "source": [
     "rfit = H2ORuleFitEstimator(algorithm=\"drf\",\n",
-    "                           min_rule_length=3,\n",
-    "                           max_rule_length=3,\n",
-    "                           max_num_rules=50,\n",
+    "                           min_rule_length=1,\n",
+    "                           max_rule_length=4,\n",
+    "                           max_num_rules=30,\n",
     "                           model_type=\"rules_and_linear\",\n",
     "                           seed=1234,\n",
     "                           rule_generation_ntrees=50)\n",
@@ -184,22 +184,176 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'HTML' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-11-70213cdf7fc4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m# Make a pretty HTML table printout of the results\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mnr\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mis_pandas\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mrule_importance\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_as_show_table\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mdisplay\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mHTML\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtable\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mto_html\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m: name 'HTML' is not defined"
-     ]
+     "data": {
+      "text/html": [
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th>variable</th>\n",
+       "      <th>coefficient</th>\n",
+       "      <th>rule</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T11N7</td>\n",
+       "      <td>0.949084</td>\n",
+       "      <td>(UniqueCarrier in {DL, F9, PI, PS, UA, US}) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td></td>\n",
+       "      <td>M2T14N17</td>\n",
+       "      <td>-0.641124</td>\n",
+       "      <td>(UniqueCarrier in {DL, F9, PI, PS, UA, US}) &amp; (UniqueCarrier in {DL, F9, PS, UA, US}) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T10N10</td>\n",
+       "      <td>-0.207439</td>\n",
+       "      <td>(UniqueCarrier in {9E, AA, AQ, AS, B6, CO, DH, EA, EV, FL, HA, HP, ML (1), MQ, NW, OH, OO, PA (1), TW, TZ, WN, XE, YV} or UniqueCarrier is NA) &amp; (Origin in {ABE, ABI, ABQ, ABY, ACT, ACY, AEX, AGS, ALB, ALO, AMA, ANC, ANI, APF, ATW, AUS, AVL, AVP, AZO, BDL, BFF, BFL, BGM, BGR, BHM, BIL, BIS, BJI, BLI, BMI, BOI, BPT, BQK, BQN, BRO, BTM, BTR, BTV, BUF, BUR, BZN, CAE, CAK, CCR, CDC, CDV, CHA, CHO, CHS, CIC, CID, CKB, CLD, CLE, CLL, CLT, CMH, CMI, CMX, COD, COS, CPR, CRP, CRW, CSG, CVG, CWA, DAB, DAY, DBQ, DCA, DET, DHN, DLH, DRO, DSM, EAU, EFD, EGE, EKO, ELM, ELP, ERI, EUG, EVV, EWN, FAI, FAR, FAT, FAY, FCA, FLG, FLL, FLO, FNT, FSD, FSM, FWA, GCN, GEG, GFK, GGG, GJT, GLH, GNV, GPT, GRB, GRK, GRR, GSO, GSP, GTF, GUC, GUM, HDN, HKY, HLN, HNL, HPN, HRL, HSV, HTS, HVN, IAD, ICT, IDA, ILE, ILM, IND, INL, IPL, ISO, ISP, ITO, IYK, JAC, JAN, JAX, KOA, KTN, LAN, LAW, LBB, LCH, LEX, LFT, LGB, LIH, LIT, LNK, LNY, LRD, LSE, LWB, LWS, LYH, MAF, MAZ, MBS, MCI, MCN, MCO, MDT, MEM, MFE, MFR, MGM, MHT, MIB, MKC, MKE, MKG, MKK, MLB, MLI, MLU, MOB, MOT, MQT, MRY, MSN, MSO, MSY, MTH, MTJ, MYR, OGG, OKC, OMA, ONT, ORF, ORH, OXR, PBI, PDX, PFN, PHF, PHL, PIA, PIE, PIH, PIT, PLN, PMD, PNS, PSC, PSE, PSP, PUB, PVD, PWM, RAP, RDD, RDM, RDR, RFD, RHI, RIC, RKS, RNO, ROA, ROC, ROP, ROR, ROW, RST, RSW, SAN, SAT, SAV, SBA, SBN, SBP, SCC, SCE, SCK, SDF, SGF, SGU, SHV, SIT, SJC, SJT, SJU, SLC, SLE, SMF, SMX, SNA, SPN, SPS, SRQ, STT, STX, SUN, SUX, SWF, SYR, TLH, TOL, TPA, TRI, TTN, TUL, TUP, TUS, TVC, TWF, TXK, TYR, TYS, UCA, VCT, VIS, VLD, VPS, WRG, WYS, XNA, YAK, YUM})</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td></td>\n",
+       "      <td>M0T9N4</td>\n",
+       "      <td>0.188001</td>\n",
+       "      <td>(UniqueCarrier in {9E, AA, AQ, AS, B6, CO, DH, EA, EV, FL, HA, HP, ML (1), MQ, NW, OH, OO, PA (1), TW, TZ, WN, XE, YV} or UniqueCarrier is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td></td>\n",
+       "      <td>M2T40N15</td>\n",
+       "      <td>0.152916</td>\n",
+       "      <td>(Origin in {ACK, ADK, ADQ, AKN, ASE, ATL, BET, BFF, BFI, BOS, BRW, BWI, CAE, CKB, CLT, CVG, CYS, DAY, DEN, DFW, DLG, DTW, DUT, ERI, EWR, EYW, FLL, FMN, HVN, JFK, LAS, LAX, LGA, MIA, MKC, MOD, MTH, OGD, OME, ORD, OTH, OTZ, PHL, PHX, PIR, PIT, PSG, PVU, ROA, SEA, SFO, SLC, SOP, SYR, TEX, UCA, YAP} or Origin is NA) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2007} or Year is NA) &amp; (UniqueCarrier in {AA, DL, EV, F9, MQ, PI, UA, US, XE} or UniqueCarrier is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T36N7</td>\n",
+       "      <td>0.121472</td>\n",
+       "      <td>(Year in {1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2006, 2007, 2008} or Year is NA) &amp; (UniqueCarrier in {DL, EV, PI, PS, UA, US})</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6</th>\n",
+       "      <td></td>\n",
+       "      <td>M2T21N15</td>\n",
+       "      <td>0.118678</td>\n",
+       "      <td>(Dest in {ABE, ABQ, ACK, ACV, ACY, ADK, AGS, AKN, ALB, AMA, ANC, APF, ASE, ATL, AUS, AVL, AVP, BDL, BFI, BGM, BGR, BHM, BMI, BOI, BOS, BQK, BQN, BTR, BTV, BUF, BWI, BZN, CAE, CAK, CCR, CHA, CHS, CID, CLT, CMH, CMI, COS, CRP, CRW, CSG, CWA, CYS, DAB, DAY, DBQ, DCA, DEN, DHN, DSM, DUT, EGE, ELM, ELP, ERI, EUG, EVV, EWN, EWR, EYW, FAI, FAY, FCA, FLL, FLO, FNT, FWA, GEG, GNV, GRK, GRR, GSO, GSP, GST, GUC, HDN, HHH, HPN, HRL, HSV, HTS, HVN, ICT, ILG, ILM, IND, ISO, ISP, ITH, JAC, JAN, JAX, JFK, LAR, LAS, LAX, LEX, LGA, LIT, LMT, LNK, LYH, MAZ, MCI, MCN, MCO, MDT, MEI, MFE, MFR, MGM, MHT, MIA, MKC, MKE, MLB, MLU, MOB, MQT, MSN, MSY, MYR, OAJ, OAK, OGD, OKC, OMA, ONT, ORD, ORF, ORH, OTH, OTZ, PBI, PDX, PFN, PHF, PHL, PHX, PIA, PIR, PIT, PNS, PSC, PSE, PSG, PVD, PWM, RCA, RDU, RFD, RIC, RNO, ROA, ROC, ROW, RSW, SAN, SAT, SAV, SBN, SCK, SDF, SEA, SFO, SHV, SIT, SJU, SKA, SLC, SMF, SOP, SPI, SRQ, STT, SWF, SYR, TLH, TOL, TPA, TRI, TTN, TUL, TUP, TUS, TVC, TYS, UCA, VIS, VLD, VPS, WRG, YAP} or Dest is NA) &amp; (UniqueCarrier in {AA, DL, PI, PS, TW, UA, US} or UniqueCarrier is NA) &amp; (Year in {1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2007} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T18N7</td>\n",
+       "      <td>0.116154</td>\n",
+       "      <td>(Year in {1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2006, 2007, 2008} or Year is NA) &amp; (Origin in {ACK, ADK, ATL, BFI, BOS, BWI, CEC, CKB, CLT, CRW, CVG, DEN, DFW, DUT, EWR, HVN, JFK, LAX, MKK, MOD, MTH, ORD, OTH, PHL, PIR, PIT, SFO, SLC, SOP, TEX, UCA})</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T2N10</td>\n",
+       "      <td>-0.110389</td>\n",
+       "      <td>(UniqueCarrier in {9E, AA, AQ, AS, B6, CO, DH, EA, EV, FL, HA, HP, ML (1), MQ, NW, OH, OO, PA (1), TW, TZ, WN, XE, YV} or UniqueCarrier is NA) &amp; (Origin in {ABE, ABI, ABQ, ABY, ACT, ACY, AEX, AGS, ALB, ALO, AMA, ANC, ANI, APF, ATW, AUS, AVL, AVP, AZO, BDL, BFF, BFL, BGM, BGR, BHM, BIL, BIS, BJI, BLI, BMI, BNA, BOI, BPT, BQK, BQN, BRO, BTM, BTR, BTV, BUF, BUR, BZN, CAE, CAK, CCR, CDC, CDV, CHA, CHO, CHS, CIC, CID, CLD, CLE, CLL, CLT, CMH, CMI, CMX, COD, COS, CPR, CRP, CRW, CSG, CVG, CWA, CYS, DAB, DAY, DBQ, DCA, DET, DHN, DLH, DRO, DSM, EAU, EFD, EGE, EKO, ELM, ELP, ERI, EUG, EVV, EWN, FAI, FAR, FAT, FAY, FCA, FLG, FLL, FLO, FNT, FSD, FSM, FWA, GCN, GEG, GFK, GGG, GJT, GLH, GNV, GPT, GRB, GRK, GRR, GSO, GSP, GTF, GTR, GUC, GUM, HDN, HKY, HLN, HNL, HPN, HRL, HSV, HTS, HVN, IAD, ICT, IDA, ILE, ILM, IND, INL, IPL, ISO, ISP, ITO, IYK, JAC, JAN, JAX, KOA, KSM, KTN, LAN, LAW, LBB, LCH, LEX, LFT, LGB, LIH, LIT, LNK, LNY, LRD, LSE, LWB, LWS, LYH, MAF, MAZ, MBS, MCI, MCN, MCO, MDT, MEM, MFE, MFR, MGM, MHT, MIB, MKE, MKG, MKK, MLB, MLI, MLU, MOB, MOT, MQT, MRY, MSN, MSO, MSY, MTJ, MYR, OGG, OKC, OMA, ONT, ORF, ORH, OXR, PBI, PDX, PFN, PHF, PHL, PIA, PIE, PIH, PIT, PLN, PMD, PNS, PSC, PSE, PSP, PUB, PVD, PWM, RAP, RDD, RDM, RDR, RFD, RHI, RIC, RKS, RNO, ROA, ROC, ROP, ROR, ROW, RST, RSW, SAN, SAT, SAV, SBA, SBN, SBP, SCC, SCE, SCK, SDF, SGF, SGU, SHV, SIT, SJC, SJT, SJU, SLC, SLE, SMF, SMX, SNA, SPN, SPS, SRQ, STT, STX, SUN, SUX, SWF, SYR, TLH, TOL, TPA, TRI, TTN, TUL, TUP, TUS, TVC, TWF, TXK, TYR, TYS, UCA, VCT, VIS, VLD, VPS, WRG, WYS, XNA, YAK, YUM})</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T6N7</td>\n",
+       "      <td>0.079796</td>\n",
+       "      <td>(Origin in {ACK, ADK, ADQ, AKN, ASE, ATL, BET, BFF, BFI, BOS, BRW, BWI, CAE, CKB, CLT, CVG, CYS, DAY, DEN, DFW, DLG, DTW, DUT, ERI, EWR, EYW, FLL, FMN, HVN, JFK, LAS, LAX, LGA, MIA, MKC, MOD, MTH, OGD, OME, ORD, OTH, OTZ, PHL, PHX, PIR, PIT, PSG, PVU, ROA, SEA, SFO, SLC, SOP, SYR, TEX, UCA, YAP} or Origin is NA) &amp; (UniqueCarrier in {AA, DL, F9, PI, PS, UA, US} or UniqueCarrier is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>10</th>\n",
+       "      <td></td>\n",
+       "      <td>M2T6N15</td>\n",
+       "      <td>0.072020</td>\n",
+       "      <td>(Origin in {ACK, ADK, ADQ, AKN, ASE, ATL, BET, BFF, BFI, BOS, BRW, BWI, CAE, CKB, CLT, CVG, CYS, DAY, DEN, DFW, DLG, DTW, DUT, ERI, EWR, EYW, FLL, FMN, HVN, JFK, LAS, LAX, LGA, MIA, MKC, MOD, MTH, OGD, OME, ORD, OTH, OTZ, PHL, PHX, PIR, PIT, PSG, PVU, ROA, SEA, SFO, SLC, SOP, SYR, TEX, UCA, YAP} or Origin is NA) &amp; (UniqueCarrier in {AA, DL, F9, PI, PS, UA, US} or UniqueCarrier is NA) &amp; (Year in {1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>11</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T27N7</td>\n",
+       "      <td>0.060383</td>\n",
+       "      <td>(Year in {1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2006, 2007, 2008} or Year is NA) &amp; (Origin in {ACK, ADK, ASE, ATL, BOS, BWI, CEC, CLT, CRW, CVG, DEN, DFW, DUT, EWR, HVN, JFK, LAX, MKC, MKK, MOD, ORD, OTH, PHL, PIR, PIT, SFO, SLC, SOP, UCA})</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>12</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T40N7</td>\n",
+       "      <td>-0.018189</td>\n",
+       "      <td>(Origin in {ACK, ADK, ADQ, AKN, ASE, ATL, BET, BFF, BFI, BOS, BRW, BWI, CAE, CKB, CLT, CVG, CYS, DAY, DEN, DFW, DLG, DTW, DUT, ERI, EWR, EYW, FLL, FMN, HVN, JFK, LAS, LAX, LGA, MIA, MKC, MOD, MTH, OGD, OME, ORD, OTH, OTZ, PHL, PHX, PIR, PIT, PSG, PVU, ROA, SEA, SFO, SLC, SOP, SYR, TEX, UCA, YAP} or Origin is NA) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2007} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>13</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T37N10</td>\n",
+       "      <td>-0.015675</td>\n",
+       "      <td>(UniqueCarrier in {9E, AA, AQ, AS, B6, CO, DH, EA, EV, FL, HA, HP, ML (1), MQ, NW, OH, OO, PA (1), TW, TZ, WN, XE, YV} or UniqueCarrier is NA) &amp; (Origin in {ABE, ABI, ABQ, ABY, ACT, ACY, AEX, AGS, ALB, ALO, AMA, ANC, ANI, APF, ATW, AUS, AVL, AVP, AZO, BDL, BFL, BGM, BGR, BHM, BIL, BIS, BJI, BLI, BMI, BOI, BPT, BQK, BQN, BRO, BTM, BTR, BTV, BUF, BUR, BZN, CAE, CAK, CCR, CDC, CDV, CHA, CHO, CHS, CIC, CID, CLD, CLE, CLL, CLT, CMH, CMI, CMX, COD, COS, CPR, CRP, CRW, CSG, CVG, CWA, DAB, DAY, DBQ, DCA, DET, DHN, DLH, DRO, DSM, EAU, EFD, EGE, EKO, ELM, ELP, ERI, EUG, EVV, EWN, FAI, FAR, FAT, FAY, FCA, FLG, FLL, FLO, FNT, FSD, FSM, FWA, GCN, GEG, GFK, GGG, GJT, GLH, GNV, GPT, GRB, GRK, GRR, GSO, GSP, GTF, GUC, GUM, HDN, HKY, HLN, HNL, HPN, HRL, HSV, HTS, HVN, IAD, ICT, IDA, ILE, ILM, IND, INL, IPL, ISO, ISP, ITO, IYK, JAC, JAN, JAX, KOA, KSM, KTN, LAN, LAW, LBB, LCH, LEX, LFT, LGB, LIH, LIT, LNK, LNY, LRD, LSE, LWB, LWS, LYH, MAF, MAZ, MBS, MCI, MCN, MCO, MDT, MEM, MFE, MFR, MGM, MHT, MIB, MKC, MKE, MKG, MKK, MLB, MLI, MLU, MOB, MOT, MQT, MRY, MSN, MSO, MSY, MTJ, MYR, OGG, OKC, OMA, ONT, ORF, ORH, OXR, PBI, PDX, PFN, PHF, PHL, PIA, PIE, PIH, PIT, PLN, PMD, PNS, PSC, PSE, PSP, PUB, PVD, PWM, RAP, RDD, RDM, RDR, RFD, RIC, RKS, RNO, ROA, ROC, ROP, ROR, ROW, RST, RSW, SAN, SAT, SAV, SBA, SBN, SBP, SCC, SCE, SCK, SDF, SGF, SGU, SHV, SIT, SJC, SJT, SJU, SLC, SLE, SMF, SMX, SNA, SPI, SPN, SPS, SRQ, STT, STX, SUN, SUX, SWF, SYR, TLH, TOL, TPA, TRI, TTN, TUL, TUP, TUS, TVC, TWF, TXK, TYR, TYS, UCA, VCT, VIS, VLD, VPS, WRG, WYS, XNA, YAK, YUM})</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T30N7</td>\n",
+       "      <td>0.011090</td>\n",
+       "      <td>(UniqueCarrier in {DL, F9, PI, PS, UA, US}) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15</th>\n",
+       "      <td></td>\n",
+       "      <td>M2T12N15</td>\n",
+       "      <td>-0.001069</td>\n",
+       "      <td>(Origin in {ACK, ADK, ADQ, AKN, ASE, ATL, BET, BFF, BFI, BOS, BRW, BWI, CAE, CKB, CLT, CVG, CYS, DAY, DEN, DFW, DLG, DTW, DUT, ERI, EWR, EYW, FLL, FMN, HVN, JFK, LAS, LAX, LGA, MIA, MKC, MOD, MTH, OGD, OME, ORD, OTH, OTZ, PHL, PHX, PIR, PIT, PSG, PVU, ROA, SEA, SFO, SLC, SOP, SYR, TEX, UCA, YAP} or Origin is NA) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2007} or Year is NA) &amp; (UniqueCarrier in {AA, DL, EV, F9, MQ, PI, UA, US} or UniqueCarrier is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>16</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T0N7</td>\n",
+       "      <td>0.000457</td>\n",
+       "      <td>(Year in {1988, 1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2006, 2007, 2008} or Year is NA) &amp; (UniqueCarrier in {DL, EV, PI, PS, UA, US})</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>17</th>\n",
+       "      <td></td>\n",
+       "      <td>linear.Distance</td>\n",
+       "      <td>0.000147</td>\n",
+       "      <td></td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>18</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T29N7</td>\n",
+       "      <td>-0.000120</td>\n",
+       "      <td>(Origin in {ACK, ADK, ADQ, AKN, ASE, ATL, BET, BFF, BFI, BOS, BRW, BWI, CAE, CKB, CLT, CVG, CYS, DAY, DEN, DFW, DLG, DTW, DUT, ERI, EWR, EYW, FLL, FMN, HVN, JFK, LAS, LAX, LGA, MIA, MKC, MOD, MTH, OGD, OME, ORD, OTH, OTZ, PHL, PHX, PIR, PIT, PSG, PVU, ROA, SEA, SFO, SLC, SOP, SYR, TEX, UCA, YAP} or Origin is NA) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000, 2001, 2007} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>19</th>\n",
+       "      <td></td>\n",
+       "      <td>M1T37N7</td>\n",
+       "      <td>0.000029</td>\n",
+       "      <td>(UniqueCarrier in {DL, F9, PI, PS, UA, US}) &amp; (Year in {1989, 1990, 1991, 1992, 1993, 1994, 1995, 1996, 1997, 1998, 2000} or Year is NA)</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
     }
    ],
    "source": [
+    "from IPython.display import display, HTML\n",
     "rule_importance = rfit.rule_importance()\n",
     "# Make a pretty HTML table printout of the results\n",
     "(table, nr, is_pandas) = rule_importance._as_show_table()\n",
