fix NoModuleFoundError for python 2.7

--- a/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
+++ b/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
@@ -49,21 +49,21 @@
      "data": {
       "text/html": [
        "<div style=\"overflow:auto\"><table style=\"width:50%\"><tr><td>H2O_cluster_uptime:</td>\n",
-       "<td>2 hours 37 mins</td></tr>\n",
+       "<td>1 min 34 secs</td></tr>\n",
        "<tr><td>H2O_cluster_timezone:</td>\n",
        "<td>Europe/Berlin</td></tr>\n",
        "<tr><td>H2O_data_parsing_timezone:</td>\n",
        "<td>UTC</td></tr>\n",
        "<tr><td>H2O_cluster_version:</td>\n",
-       "<td>3.32.0.99999</td></tr>\n",
+       "<td>3.33.0.99999</td></tr>\n",
        "<tr><td>H2O_cluster_version_age:</td>\n",
-       "<td>7 days, 15 hours and 21 minutes </td></tr>\n",
+       "<td>2 days </td></tr>\n",
        "<tr><td>H2O_cluster_name:</td>\n",
        "<td>mori</td></tr>\n",
        "<tr><td>H2O_cluster_total_nodes:</td>\n",
        "<td>1</td></tr>\n",
        "<tr><td>H2O_cluster_free_memory:</td>\n",
-       "<td>4.918 Gb</td></tr>\n",
+       "<td>4.850 Gb</td></tr>\n",
        "<tr><td>H2O_cluster_total_cores:</td>\n",
        "<td>8</td></tr>\n",
        "<tr><td>H2O_cluster_allowed_cores:</td>\n",
@@ -83,14 +83,14 @@
       ],
       "text/plain": [
        "--------------------------  --------------------------------\n",
-       "H2O_cluster_uptime:         2 hours 37 mins\n",
+       "H2O_cluster_uptime:         1 min 34 secs\n",
        "H2O_cluster_timezone:       Europe/Berlin\n",
        "H2O_data_parsing_timezone:  UTC\n",
-       "H2O_cluster_version:        3.32.0.99999\n",
-       "H2O_cluster_version_age:    7 days, 15 hours and 21 minutes\n",
+       "H2O_cluster_version:        3.33.0.99999\n",
+       "H2O_cluster_version_age:    2 days\n",
        "H2O_cluster_name:           mori\n",
        "H2O_cluster_total_nodes:    1\n",
-       "H2O_cluster_free_memory:    4.918 Gb\n",
+       "H2O_cluster_free_memory:    4.850 Gb\n",
        "H2O_cluster_total_cores:    8\n",
        "H2O_cluster_allowed_cores:  8\n",
        "H2O_cluster_status:         locked, healthy\n",
@@ -281,6 +281,7 @@
    "outputs": [],
    "source": [
     "try:\n",
+    "    import xgboost as xgb\n",
     "    import pandas as pd\n",
     "    data = pd.read_csv(\"../../smalldata/logreg/prostate.csv\")\n",
     "\n",
@@ -290,7 +291,6 @@
     "    x_names.remove(\"ID\")\n",
     "    x = data[x_names]\n",
     "\n",
-    "    import xgboost as xgb\n",
     "\n",
     "    D_train = xgb.DMatrix(x, label=y)\n",
     "\n",
@@ -306,7 +306,7 @@
     "    xgboost_model = xgb.train(param, D_train, steps)\n",
     "    # you can compare the H2O XGBoost and native XGBoost have the same tree structure\n",
     "    xgboost_model.trees_to_dataframe()\n",
-    "except ModuleNotFoundError:\n",
+    "except ImportError:\n",
     "    print(\"module 'xgboost' is not installed\")"
    ]
   },
