--- a/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
+++ b/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
@@ -307,7 +307,8 @@
     "    # you can compare the H2O XGBoost and native XGBoost have the same tree structure\n",
     "    xgboost_model.trees_to_dataframe()\n",
     "except ImportError:\n",
-    "    print(\"module 'xgboost' is not installed\")"
+    "    print(\"module 'xgboost' is not installed\")\n",
+    "    xboost_model = None"
    ]
   },
   {
@@ -1168,7 +1169,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.7.3rc1"
   }
  },
  "nbformat": 4,
