--- a/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
+++ b/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
@@ -308,7 +308,7 @@
     "    xgboost_model.trees_to_dataframe()\n",
     "except ImportError:\n",
     "    print(\"module 'xgboost' is not installed\")\n",
-    "    xboost_model = None"
+    "    xgboost_model = None"
    ]
   },
   {
