--- a/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
+++ b/h2o-py/demos/xgboost_feature_interactions_demo.ipynb
@@ -388,16 +388,14 @@
     "\n",
     "In the code below, multiple table output provides comprendious insights into higher order interactions between the features of xgboost trees visualized above. Also additional usefull tables summarizing leaf statistics and split value histograms per each feature are provided. Measures used are either one of:\n",
     "\n",
-    "**Gain** is the improvement in accuracy brought by a feature to the branches it is on. The idea is that before adding a new split on a feature X to the branch there was some wrongly classified elements, after adding the split on this feature, there are two new branches, and each of these branch is more accurate (one branch saying if your observation is on this branch then it should be classified as 1, and the other branch saying the exact opposite).\n",
+    "**Gain** implies the relative contribution of the corresponding feature to the model calculated by taking each feature's contribution for each tree in the model. A higher value of this metric when compared to another feature implies it is more important for generating a prediction.\n",
     "\n",
-    "**Cover** measures the relative quantity of observations concerned by a feature.\n",
+    "**Cover** is a metric to measure the number of observations affected by the split. Counted over the specific feature it measures the relative quantity of observations concerned by a feature.\n",
     "\n",
-    "**Frequency** is a simpler way to measure the Gain. It just counts the number of times a feature is used in all generated trees. You should not use it (unless you know why you want to use it).\n",
-    "(Source: https://xgboost.readthedocs.io/en/latest/R-package/discoverYourData.html)\n",
+    "**Frequency (FScore)** is the number of times a feature is used in all generated trees. Please note that it does not take the tree-depth nor tree-index of splits a feature occurs into consideration, neither the amount of possible splits of a feature. Hence, it is often suboptimal measure for importance.\n",
     "\n",
     "\n",
-    "or their averaged / weighed / ranked alternatives.\n",
-    "\n"
+    "or their averaged / weighed / ranked alternatives."
    ]
   },
   {
@@ -1118,7 +1116,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3rc1"
+   "version": "3.8.1"
   }
  },
  "nbformat": 4,
